<resources>
    <string name="app_name">Group14_InClass10</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deleteCourse">Delete Course</string>
    <string name="courses">Courses</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="courseGrade">Course Grade</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancle</string>
    <string name="courseNumber">Course Number</string>
    <string name="courseName">Course Name</string>
    <string name="creditHours">Credit Hours</string>
    <string name="gpa">GPA: 0.0</string>
    <string name="hours">Hours: 0.0</string>
    <string name="addCourse">Add Course</string>
</resources>