<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCourseFragment" >

    <EditText
        android:id="@+id/editTextCourseNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/courseNumber"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextCourseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/courseName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCourseNum"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextCreditHours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/creditHours"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCourseName"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/courseGrade"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/editTextCreditHours"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreditHours" />

    <RadioGroup
        android:id="@+id/radioGroupGrades"
        android:layout_width="56dp"
        android:layout_height="269dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:checkedButton="@id/radioButtonA"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreditHours">

        <RadioButton
            android:id="@+id/radioButtonA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a" />

        <RadioButton
            android:id="@+id/radioButtonB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b" />

        <RadioButton
            android:id="@+id/radioButtonC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c" />

        <RadioButton
            android:id="@+id/radioButtonD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d" />

        <RadioButton
            android:id="@+id/radioButtonF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#B8AEAE"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#B8AEAE"
        android:text="@android:string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonSubmit" />
</androidx.constraintlayout.widget.ConstraintLayout>